<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Greetings"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/darkText"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/login1"
            android:textColor="@color/grayText"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/email"
            android:hint="@string/emailHint"
            android:backgroundTint="@color/primaryBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password"
            android:hint="Password"
            android:inputType="textPassword"
            android:backgroundTint="@color/primaryBlue"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/loginBtn"
            android:text="@string/login2"
            android:textColor="@color/white"
            android:backgroundTint="@color/primaryBlue"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <TextView
            android:id="@+id/signupText"
            android:text="@string/signUp"
            android:textColor="@color/primaryBlue"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</ScrollView>